# TimeSeries

./: .gitignore  README.md  assessor.py  pyproject.toml  smoothers.py  timeseries.py
predictors/: __init__.py  arima.py  garch.py  hannenriessen.py  montecarlo.py  naive.py
predictors/autoregression/: __init__.py  v1.py  v2.py  var.py
predictors/decomposition/: decompositions.py
timeseries_modeling/: assessor.py  smoothers.py  utils.py
timeseries_modeling/dataframes/: csvdataframe.py  quandldataframe.py  ticketdataframe.py
timeseries_modeling/predictors/: arima.py  garch.py  hannenriessen.py  montecarlo.py  naive.py
timeseries_modeling/predictors/autoregression/: v1.py  v2.py  var.py
timeseries_modeling/predictors/decomposition/: decompositions.py
