[project]
name = "timeseries_DAVID_RODRIGUEZ_POZO"
version = "0.0.1"
authors = [
  { name="David Rodriguez", email="davidrp1996@gmail.com" },
]
description = "Module for time series handling"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/davidrodriguezpozo/TimeSeries"
"Bug Tracker" = "https://github.com/davidrodriguezpozo/TimeSeries/issues"